Added new favicon, renamed old favicon, added OG image

--- a/index.html
+++ b/index.html
@@ -3,19 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bell Chem - Premium Chemical Solutions & Industrial Dyes Manufacturer</title>
-    <meta name="description" content="Leading manufacturer of high-quality chemicals and industrial dyes in India. Bell Chem provides premium chemical solutions for textile, pharmaceutical, and manufacturing industries." />
+
+    <title>Bell Chem - Premium Chemical Solutions & Industrial Dyes Supplier</title>
+
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Reliable supplier of high-quality dyes, auxiliaries, and industrial chemicals. An A.K. Jain & Co. enterprise supporting textile, chemical, and manufacturing industries worldwide."
+    />
     <meta name="author" content="Bell Chem" />
-    <meta name="keywords" content="chemical manufacturer India, industrial dyes, textile chemicals, pharmaceutical chemicals, Bell Chem, chemical supplier, dye manufacturer" />
+    <meta
+      name="keywords"
+      content="Bell Chem, chemical supplier, dyes, textile chemicals, industrial chemicals, optical brighteners, emulsifiers, auxiliaries, dye manufacturer, India chemicals"
+    />
 
-    <meta property="og:title" content="Bell Chem - Premium Chemical Solutions & Industrial Dyes Manufacturer" />
-    <meta property="og:description" content="Leading manufacturer of high-quality chemicals and industrial dyes in India. Premium chemical solutions for textile, pharmaceutical, and manufacturing industries." />
+    <!-- OpenGraph Meta Tags (LinkedIn, Facebook, WhatsApp Preview) -->
+    <meta property="og:title" content="Bell Chem - Industrial Chemicals & Dyes Supplier" />
+    <meta
+      property="og:description"
+      content="Trusted sourcing of dyes, auxiliaries, surfactants, pigments, and speciality chemicals. An A.K. Jain & Co. Enterprise."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://bellchem.in" />
+    <meta property="og:image" content="https://bellchem.in/og-image.png" />
 
+    <!-- Twitter Preview Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Bell Chem - Industrial Chemicals & Dyes Supplier" />
+    <meta
+      name="twitter:description"
+      content="Trusted sourcing of dyes, auxiliaries, surfactants, pigments, and speciality chemicals. An A.K. Jain & Co. Enterprise."
+    />
+    <meta name="twitter:image" content="https://bellchem.in/og-image.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
   </head>
 
   <body>
