Added Organization Schema + updated meta tags

--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
+    <!-- Organization Schema (Required for logo in Google Search) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Bell Chem",
+      "url": "https://bellchem.in",
+      "logo": "https://bellchem.in/og-image.png",
+      "sameAs": [
+        "https://www.linkedin.com/company/bell-chem"
+      ]
+    }
+    </script>
+
   </head>
 
   <body>
